# SOA

./: .gitignore  README.md
PA.2018.12/: .gitignore  pyproject.toml
PA.2018.12/.dvc/: config
PA.2018.12/advanced_implementation/: .dockerignore  Dockerfile  README.md  data.dvc  docker-compose.yml  pyproject.toml  run.sh  run_api.py  run_enhanced.sh  run_integration_tests.sh  run_tests.sh  simple_prediction.py
PA.2018.12/advanced_implementation/api/: __init__.py  main.py  metrics.py  models.py  routes.py  utils.py
PA.2018.12/advanced_implementation/models/: binary_classifier.joblib  binary_model_with_weights.joblib  classification_model.joblib  enhanced_classifier_model.json  enhanced_feature_names.joblib  enhanced_regressor_model.json  enhanced_xgboost_model.joblib  enhanced_xgboost_model.json  feature_importance.csv  feature_names.joblib  injury_regressor.joblib  multiclass_model_with_oversampling.joblib  regression_model_with_weights.joblib  xgboost_model.joblib  xgboost_model.json
PA.2018.12/advanced_implementation/results/: enhanced_feature_importance.csv  feature_importance.csv  model_metrics.csv  prediction_metrics.json
PA.2018.12/advanced_implementation/scripts/: create_model_versions.py  data_loader.py  delete_duplicate_versions.py  delete_old_versions.py  display_model_metrics.py  enhanced_feature_engineering.py  enhanced_main.py  enhanced_model_training.py  export_metrics_to_db.py  feature_engineering.py  main.py  mlflow_utils.py  model_training.py  prediction_utility.py  visualize_predictions.py
PA.2018.12/advanced_implementation/test_results/: api_test_results_20250604_155734.json  api_test_results_20250604_162853.json  api_test_results_20250604_162907.json  api_test_results_20250604_162910.json  api_test_results_20250604_162912.json  api_test_results_20250604_162915.json  api_test_results_20250604_162918.json  api_test_results_20250604_164241.json  api_test_results_20250604_164243.json  api_test_results_20250604_164245.json  api_test_results_20250604_164247.json  api_test_results_20250604_164249.json  api_test_results_20250604_164251.json  api_test_results_20250604_164253.json  api_test_results_20250604_164255.json  api_test_results_20250604_164257.json  api_test_results_20250604_164259.json  api_test_results_20250604_165125.json  api_test_results_20250604_165127.json  api_test_results_20250604_165129.json  api_test_results_20250604_165131.json  api_test_results_20250604_165133.json  api_test_results_20250604_165135.json  api_test_results_20250604_165137.json  api_test_results_20250604_165139.json  api_test_results_20250604_165141.json  api_test_results_20250604_165143.json  api_test_results_20250604_173534.json  api_test_results_20250604_173537.json  api_test_results_20250604_173539.json  api_test_results_20250604_173541.json  api_test_results_20250604_173543.json  api_test_results_20250604_173545.json  api_test_results_20250604_173548.json  api_test_results_20250604_173550.json  (+32 more)
PA.2018.12/mlruns/0/: meta.yaml
PA.2018.12/testing/: edu-2018-12-exam-pa-rmd solution.Rmd  edu_2018_12_minimal.py
(+986 files in other folders)
