[project]
name = "soa-exam-pa"
version = "0.1.0"
description = "Society of Actuaries Predictive Analytics Exam Project"
authors = [
    {name = "Scarlett Attensil"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.16.0,<2.2.0)",
    "matplotlib (>=3.5.0,<=3.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.0.1,<4.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "ydata-profiling @ https://github.com/pandas-profiling/pandas-profiling/archive/master.zip",
    "graphviz (>=0.20.3,<0.21.0)",
    "fastapi (>=0.110.0,<0.111.0)",
    "uvicorn (>=0.27.0,<0.28.0)",
    "pydantic (>=2.6.0,<3.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "flask (>=3.1.1,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]
[tool.poetry]
name = "soa-exam-pa"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.group.dev.dependencies]
dvc = "^3.59.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
