[tool.poetry]
name = "mine-safety-api"
version = "0.1.0"
description = "Mine Safety Injury Rate Prediction API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
xgboost = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
joblib = "^1.3.0"
pytest = "^7.3.1"
flask = "^3.1.1"
httpx = "^0.28.1"
requests = "^2.32.3"
prometheus-fastapi-instrumentator = "5.9.1"
mlflow = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
